WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301540
Fix crash in RemoteLayerWithRemoteRenderingBackingStore::displayListHandle
https://bugs.webkit.org/show_bug.cgi?id=301540
Summary
Fix crash in RemoteLayerWithRemoteRenderingBackingStore::displayListHandle
Simon Fraser (smfr)
Reported
2025-10-27 16:29:09 PDT
Crash data suggests we can crash on visionOS in RemoteLayerWithRemoteRenderingBackingStore::displayListHandle(). <
rdar://153594463
>
Attachments
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2025-10-27 16:45:04 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/53057
EWS
Comment 2
2025-10-27 20:13:49 PDT
Committed
302221@main
(4b8e15395a6b): <
https://commits.webkit.org/302221@main
> Reviewed commits have been landed. Closing PR #53057 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug