Fix crash in RemoteLayerWithRemoteRenderingBackingStore::displayListHandle https://bugs.webkit.org/show_bug.cgi?id=301540 rdar://153594463

Reviewed by Tim Horton.

Crash data suggest that we can crash in displayListHandle() because m_layer->owner() is null.

* Source/WebKit/Shared/RemoteLayerTree/RemoteLayerWithRemoteRenderingBackingStore.mm:
(WebKit::RemoteLayerWithRemoteRenderingBackingStore::displayListHandle const):

Canonical link: https://commits.webkit.org/302221@main